--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "image-upload-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,5 +14,10 @@
     "express-fileupload": "^1.2.0",
     "node-thumbnail": "^0.15.0",
     "short-uuid": "^4.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
